--- a/locales/he.json
+++ b/locales/he.json
@@ -22,6 +22,16 @@
                 "yes": "כן",
                 "no": "לא",
                 "comment": "המינימום בין תרומות דם על פי קריטריוני מד״א הינו שלושה חודשים לפחות. אין באפשרותך לתרום דם כעת."
+            },
+            "age": {
+                "q": "מהו גילך?",
+                "under17": "מתחת ל-17",
+                "under17comment": "לא ניתן לתרום דם מתחת לגיל 17.",
+                "17to18": "17 עד 18",
+                "17to18comment": "באפשרותך לתרום דם, אך תידרש חתימת הורים/אפוטרופוס. ניתן להוריד את הטופס המתאים בקישור: https://www.mdais.org/media/3384/mda-044-7905.pdf",
+                "18to59": "18 עד 59",
+                "60up": "60 ומעלה",
+                "60upComment": "מגיל 60 אם זו התרומה הראשונה, נדרש אישור רופא מטפל. מגיל 65 נדרש אישור רופא לפני כל תרומה."
             }
         },
         "conclusion": {
