--- a/locales/he.json
+++ b/locales/he.json
@@ -32,6 +32,249 @@
                 "18to59": "18 עד 59",
                 "60up": "60 ומעלה",
                 "60upComment": "מגיל 60 אם זו התרומה הראשונה, נדרש אישור רופא מטפל. מגיל 65 נדרש אישור רופא לפני כל תרומה."
+            },
+            "gender": {
+                "q": "מהו מינך?",
+                "male": "זכר",
+                "female": "נקבה"
+            },
+            "pregnant": {
+                "q": "האם הינך בהריון כעת?",
+                "yes": "כן",
+                "comment": "לא ניתן לתרום דם במהלך הריון.",
+                "no": "לא"
+            },
+            "birth": {
+                "q": "האם ילדת בחצי שנה האחרונה?",
+                "yes": "כן",
+                "comment": "לא ניתן לתרום דם לאחר לידה.",
+                "no": "לא"
+            },
+            "conditions": {
+                "q": "האם הינך סובל מאחד מהמצבים הבאים?",
+                "description": "- בעיה לבבית/הפרעות בקצב הלב הדורשות טיפול תרופתי<br/>- המופיליה/מחלת הנפילה (אפילפסיה) המטופלת בטיפול תרופתי<br/>- חווית התקף אפילפסיה ב-5 השנים האחרונות",
+                "yes": "כן",
+                "comment": "אין באפשרותך לתרום. מתן תרומת דם עשויה לסכן את בריאותך.",
+                "no": "לא"
+            },
+            "antibiotics": {
+                "q": "האם טופלת באנטיביוטיקה בחודש האחרון?",
+                "yesAndHealed": "כן, סיימתי את הטיפול והחלמתי מהמחלה",
+                "yesAndNotHealed": "כן, טרם סיימתי את הטיפול ואני עדיין נוטל את האנטיביוטיקה / לא החלמתי",
+                "comment": "אין באפשרותך לתרום כעת, עליך לסיים את הטיפול לפני מתן תרומת דם.",
+                "no": "לא"
+            },
+            "teeth": {
+                "q": "האם עברת טיפול שיניים לאחרונה?",
+                "description": "- שיננית ב-24 שעות האחרונות<br/>- טיפול שורש/עקירת שן בשבוע האחרון<br/>- השתלת שיניים בחודש האחרון?",
+                "yes": "כן",
+                "comment": "לא ניתן לתרום דם לאחר טיפול שיניים",
+                "no": "לא"
+            },
+            "hepatitis": {
+                "q": "האם הינך חולה או חלית בעבר בדלקת כבד (צהבת)?",
+                "A": "כן, סוג A",
+                "BC": "כן, סוג B או C",
+                "NA": "כן, מסיבה לא ידוע",
+                "no": "לא"
+            },
+            "hepatitis_A_notRecent": {
+                "q": "האם החלמת וחלפה שנה ממועד ההחלמה?",
+                "yes": "כן",
+                "no": "לא",
+                "comment": "אין באפשרותך לתרום דם כעת."
+            },
+            "hepatitis_NA_notRecent": {
+                "q": "האם החלמת וחלפו שנתיים ממועד ההחלמה?",
+                "yes": "כן",
+                "no": "לא",
+                "comment": "אין באפשרותך לתרום דם כעת."
+            },
+            "vaccine": {
+                "q": "האם קיבלת חיסון לאחרונה?",
+                "description": "האם קיבלת חיסון לאחת מהמחלות הבאות בחודש האחרון: אדמת, חצבת, חזרת, אבעבעות רוח, קדחת צהובה?",
+                "yes": "כן",
+                "comment": "אין באפשרותך לתרום דם כעת.",
+                "no": "לא"
+            },
+            "asthma": {
+                "q": "האם הינך חולה באסתמה?",
+                "yes": "כן",
+                "no": "לא"
+            },
+            "asthma_yes_well": {
+                "q": "האם הינך מרגיש טוב, ללא התקף בשבוע האחרון ולא נוטל סטרואידים בכדורים?",
+                "yes": "כן",
+                "no": "לא",
+                "comment": "אין באפשרותך לתרום דם כעת."
+            },
+            "diabetes": {
+                "q": "האם הינך חולה בסכרת?",
+                "yes": "כן",
+                "no": "לא"
+            },
+            "diabetes_yes_balanced": {
+                "q": "האם הסכרת מאוזנת? (על ידי דיאטה או תרופות)",
+                "yes": "כן",
+                "no": "לא מאוזנת / מטופלת באינסולין",
+                "comment": "אין באפשרותך לתרום דם כעת."
+            },
+            "cancer": {
+                "q": "האם הינך חולה או שחלית בעבר במחלה ממאירה?",
+                "yesVirus": "כן, מחלה או היסטוריה של מחלה ממאירה המטולוגית או המושרית על ידי וירוסים (לויקמיה, לימפומה, מחלת הודג'קין).",
+                "comment": "אין באפשרותך לתרום דם כעת.",
+                "yesOther": "כן, גידולים אחרים.",
+                "no": "לא"
+            },
+            "cancer_yesOther_beated": {
+                "q": "האם חלפו 5 שנים מהשלמת הטיפול והחלמה מלאה?",
+                "yes": "כן",
+                "no": "לא",
+                "comment": "אין באפשרותך לתרום דם כעת."
+            },
+            "anemia": {
+                "q": "האם יש לך אנמיה או נטיה לדמם?",
+                "yes": "כן",
+                "comment": "אין באפשרותך לתרום דם כעת.",
+                "no": "לא"
+            },
+            "transfusion": {
+                "q": "האם קיבלת עירוי דם או מרכיבי דם?",
+                "yesLately": "כן, ב-4 חודשים האחרונים",
+                "comment": "אין באפשרותך לתרום דם כעת.",
+                "yesNotLately": "כן, לפני יותר מ-4 חודשים",
+                "no": "לא"
+            },
+            "miscProcedures": {
+                "q": "האם ביצעת כתובת קעקוע, פירסינג, איפור קבוע או אנדוסקופיה עם ביופסיה?",
+                "yesLately": "כן, ב-4 חודשים האחרונים",
+                "comment": "אין באפשרותך לתרום דם כעת.",
+                "yesNotLately": "כן, לפני יותר מ-4 חודשים",
+                "no": "לא"
+            },
+            "countriesLastYear": {
+                "q": "האם ביקרת בשנה האחרונה באחת מהמדינות הבאות?",
+                "description": [
+                    "אוגנדה",
+                    "איי שלמה",
+                    "אינדונזיה",
+                    "אנגולה",
+                    "אסוואטיני(סווזילנד)",
+                    "אפגניסטן",
+                    "אקוודור",
+                    "אריתריאה",
+                    "אתיופיה",
+                    "בוטסואנה",
+                    "בוליביה",
+                    "בורונדי",
+                    "בורמה (מיאנמר)",
+                    "בורקינה פאסו",
+                    "בליז",
+                    "בנגלדש",
+                    "בנין",
+                    "ברזיל",
+                    "גאנה",
+                    "גבון",
+                    "גואטמלה",
+                    "גיאנה",
+                    "גיאנה הצרפתית",
+                    "ג'יבוטי",
+                    "גינאה",
+                    "גינאה ביסאו",
+                    "גינאה המשוונית",
+                    "גמביה",
+                    "דרום אפריקה",
+                    "דרום סודאן",
+                    "האיטי",
+                    "הודו",
+                    "הונדורס",
+                    "הרפובליקה הדומיניקנית",
+                    "הרפובליקה הדמוקרטית  של קונגו (קונגו-קינשאסה)",
+                    "הרפובליקה המרכז אפריקאית",
+                    "הרפובליקה של קונגו (קונגו- ברזוויל)",
+                    "וייטנאם",
+                    "ונואטו",
+                    "ונצואלה",
+                    "זימבבואה",
+                    "זמביה",
+                    "זנזיבר(טנזניה)",
+                    "חוף השנהב",
+                    "טוגו",
+                    "טנזניה",
+                    "לאוס",
+                    "ליבריה",
+                    "מאוריטניה",
+                    "מאלי",
+                    "מדגסקר",
+                    "מוזמביק",
+                    "מזרח טימור",
+                    "מלאווי",
+                    "מלזיה",
+                    "מקסיקו",
+                    "ניגריה",
+                    "ניז'ר",
+                    "ניקרגואה",
+                    "נמיביה",
+                    "נפאל",
+                    "סאו טומה ופרינסיפה",
+                    "סודאן",
+                    "סומליה",
+                    "סורינם",
+                    "סיירה-לאון",
+                    "סנגל",
+                    "ערב הסעודית",
+                    "פיליפינים",
+                    "פנמה",
+                    "פפואה  גינאה החדשה",
+                    "פקיסטן",
+                    "פרו",
+                    "צ'אד",
+                    "קולומביה",
+                    "קומורו",
+                    "קוריאה הדרומית",
+                    "קוריאה הצפונית",
+                    "קמבודיה",
+                    "קמרון",
+                    "קניה",
+                    "רואנדה",
+                    "תאילנד",
+                    "תימן"
+                ],
+                "yes": "כן",
+                "no": "לא",
+                "comment": "אין באפשרותך לתרום דם כעת."
+            },
+            "countriesAIDS": {
+                "q": "האם שהית או ביקרת באחת מהמדינות הבאות?",
+                "description": [
+                    "איי בהאמה",
+                    "אריתריאה",
+                    "אתיופיה",
+                    "בוטסואנה",
+                    "בליז",
+                    "ברבדוס",
+                    "ג'מייקה",
+                    "דרום אפריקה",
+                    "הרפובליקה הדומיניקנית",
+                    "טרינידד וטובגו",
+                    "כף ורדה",
+                    "לסוטו",
+                    "מאוריציוס",
+                    "נמיביה",
+                    "סורינם",
+                    "תאילנד"
+                ],
+                "yesLately": "כן, בשלושת החודשים האחרונים",
+                "comment": "אין באפשרותך לתרום דם כעת.",
+                "yesNotLately": "כן, לפני יותר משלושה חודשים",
+                "no": "לא"
+            },
+            "intercourse": {
+                "q": "האם קיימת יחסי מין בסיכון גבוה להידבקות במחלות אשר עלולות לעבור בעירוי (יחסים אנאליים ו/או בהשפעת סמים) עם שותף/ה חדש/ה או שותפים מרובים?",
+                "yesLately": "כן, בשלושת החודשים האחרונים",
+                "yesLatelyConfirmationText": "אין באפשרותך לתרום דם כעת.",
+                "yesNotLately": "כן, לפני יותר משלושה חודשים",
+                "no": "לא"
             }
         },
         "conclusion": {
