fix countries list

--- a/locales/en.json
+++ b/locales/en.json
@@ -154,116 +154,14 @@
             },
             "countriesLastYear": {
                 "q": "Have you visited one of the following countries in the last year?",
-                "description": [
-                    "Uganda",
-                    "Solomon Islands",
-                    "Indonesia",
-                    "Angola",
-                    "Swaziland",
-                    "Afganistan",
-                    "Ecuador",
-                    "Eritrea",
-                    "Ethiopia",
-                    "Botswana",
-                    "Bolivia",
-                    "Burundi",
-                    "Burma",
-                    "Burkina Faso",
-                    "Belize",
-                    "Bangladesh",
-                    "Benin",
-                    "Brazil",
-                    "Ghana",
-                    "Gabon",
-                    "Guatemala",
-                    "Guyana",
-                    "French Guiana",
-                    "Djibouti",
-                    "Guinea",
-                    "Guinea-Bissau",
-                    "Equatorial Guinea",
-                    "Gambia",
-                    "South Africa",
-                    "South Sudan",
-                    "Haiti",
-                    "India",
-                    "Honduras",
-                    "Dominican Republic",
-                    "Democratic Republic of the Congo (Congo-Kinshasa)",
-                    "Central African Republic",
-                    "Republic of the Congo (Congo-Brazzaville)",
-                    "Vietnam",
-                    "Vanuatu",
-                    "Venezuela",
-                    "Zimbabwe (Rhodesia)",
-                    "Zambia",
-                    "Zanzibar(Tansania)",
-                    "Cote d'Ivoire (Ivory Coast)",
-                    "Togo",
-                    "Tansania",
-                    "Laos",
-                    "Liberia",
-                    "Mauritania",
-                    "Mali",
-                    "Madagascar",
-                    "Mozambique",
-                    "Timor - Leste",
-                    "Malawi",
-                    "Malaysia",
-                    "Mexico",
-                    "Nigeria",
-                    "Niger",
-                    "Nicaragua",
-                    "Namibia",
-                    "Nepal",
-                    "Sao Tome & Principe",
-                    "Sudan",
-                    "Somalia",
-                    "Suriname",
-                    "Sierra Leone",
-                    "Senegal",
-                    "Saudi Arabia",
-                    "Philippines",
-                    "Panama",
-                    "Papua New Guinea",
-                    "Pakistan",
-                    "Peru",
-                    "Chad",
-                    "Colombia",
-                    "Comoros",
-                    "Korea South",
-                    "Korea North",
-                    "Cambodia",
-                    "Cameroon",
-                    "Kenya",
-                    "Rwanda",
-                    "Thailand",
-                    "Yemen"
-                ],
+                "description": "Uganda, Solomon Islands, Indonesia, Angola, Swaziland, Afganistan, Ecuador, Eritrea, Ethiopia, Botswana, Bolivia, Burundi, Burma ,Burkina Faso, Belize, Bangladesh, Benin, Brazil, Ghana, Gabon, Guatemala, Guyana, French Guiana, Djibouti, Guinea, Guinea-Bissau, Equatorial Guinea, Gambia, South Africa, South Sudan, Haiti, India, Honduras, Dominican Republic, Democratic Republic of the Congo (Congo-Kinshasa), Central African Republic, Republic of the Congo (Congo-Brazzaville), Vietnam, Vanuatu, Venezuela, Zimbabwe (Rhodesia), Zambia, Zanzibar(Tansania), Cote d'Ivoire (Ivory Coast), Togo, Tansania, Laos, Liberia, Mauritania, Mali, Madagascar, Mozambique, Timor - Leste, Malawi, Malaysia, Mexico, Nigeria ,Niger, Nicaragua, Namibia, Nepal, Sao Tome & Principe, Sudan, Somalia, Suriname, Sierra Leone, Senegal, Saudi Arabia, Philippines, Panama, Papua New Guinea, Pakistan, Peru, Chad, Colombia, Comoros, Korea South, Korea North, Cambodia, Cameroon, Kenya, Rwanda, Thailand, Yemen",
                 "yes": "Yes",
                 "no": "No",
                 "comment": "You cannot donate blood now."
             },
             "countriesAIDS": {
                 "q": "Have you stayed or visited one of the following countries?",
-                "description": [
-                    "Bahamas",
-                    "Eritrea",
-                    "Ethiopia",
-                    "Botswana",
-                    "Belize",
-                    "Barbados",
-                    "Jamaica",
-                    "South Africa",
-                    "Dominican Republic",
-                    "Trinidad and Tobago",
-                    "Cape Verde Islands",
-                    "Lesotho",
-                    "Mauritius",
-                    "Namibia",
-                    "Suriname",
-                    "Thailand"
-                ],
+                "description": "Bahamas, Eritrea, Ethiopia, Botswana, Belize, Barbados, Jamaica, South Africa, Dominican Republic, Trinidad and Tobago, Cape Verde Islands, Lesotho, Mauritius, Namibia, Suriname, Thailand",
                 "yesLately": "Yes, in the last three months",
                 "comment": "You cannot donate blood now.",
                 "yesNotLately": "Yes, more than three months ago",
