--- a/locales/he.json
+++ b/locales/he.json
@@ -154,116 +154,14 @@
             },
             "countriesLastYear": {
                 "q": "האם ביקרת בשנה האחרונה באחת מהמדינות הבאות?",
-                "description": [
-                    "אוגנדה",
-                    "איי שלמה",
-                    "אינדונזיה",
-                    "אנגולה",
-                    "אסוואטיני(סווזילנד)",
-                    "אפגניסטן",
-                    "אקוודור",
-                    "אריתריאה",
-                    "אתיופיה",
-                    "בוטסואנה",
-                    "בוליביה",
-                    "בורונדי",
-                    "בורמה (מיאנמר)",
-                    "בורקינה פאסו",
-                    "בליז",
-                    "בנגלדש",
-                    "בנין",
-                    "ברזיל",
-                    "גאנה",
-                    "גבון",
-                    "גואטמלה",
-                    "גיאנה",
-                    "גיאנה הצרפתית",
-                    "ג'יבוטי",
-                    "גינאה",
-                    "גינאה ביסאו",
-                    "גינאה המשוונית",
-                    "גמביה",
-                    "דרום אפריקה",
-                    "דרום סודאן",
-                    "האיטי",
-                    "הודו",
-                    "הונדורס",
-                    "הרפובליקה הדומיניקנית",
-                    "הרפובליקה הדמוקרטית  של קונגו (קונגו-קינשאסה)",
-                    "הרפובליקה המרכז אפריקאית",
-                    "הרפובליקה של קונגו (קונגו- ברזוויל)",
-                    "וייטנאם",
-                    "ונואטו",
-                    "ונצואלה",
-                    "זימבבואה",
-                    "זמביה",
-                    "זנזיבר(טנזניה)",
-                    "חוף השנהב",
-                    "טוגו",
-                    "טנזניה",
-                    "לאוס",
-                    "ליבריה",
-                    "מאוריטניה",
-                    "מאלי",
-                    "מדגסקר",
-                    "מוזמביק",
-                    "מזרח טימור",
-                    "מלאווי",
-                    "מלזיה",
-                    "מקסיקו",
-                    "ניגריה",
-                    "ניז'ר",
-                    "ניקרגואה",
-                    "נמיביה",
-                    "נפאל",
-                    "סאו טומה ופרינסיפה",
-                    "סודאן",
-                    "סומליה",
-                    "סורינם",
-                    "סיירה-לאון",
-                    "סנגל",
-                    "ערב הסעודית",
-                    "פיליפינים",
-                    "פנמה",
-                    "פפואה  גינאה החדשה",
-                    "פקיסטן",
-                    "פרו",
-                    "צ'אד",
-                    "קולומביה",
-                    "קומורו",
-                    "קוריאה הדרומית",
-                    "קוריאה הצפונית",
-                    "קמבודיה",
-                    "קמרון",
-                    "קניה",
-                    "רואנדה",
-                    "תאילנד",
-                    "תימן"
-                ],
+                "description": "אוגנדה, איי שלמה, אינדונזיה, אנגולה, אסוואטיני (סווזילנד), אפגניסטן, אקוודור, אריתריאה, אתיופיה, בוטסואנה, בוליביה, בורונדי, בורמה (מיאנמר), בורקינה פאסו, בליז, בנגלדש, בנין, ברזיל, גאנה, גבון, גואטמלה, גיאנה, גיאנה הצרפתית, ג'יבוטי, גינאה, גינאה ביסאו, גינאה המשוונית, גמביה, דרום אפריקה, דרום סודאן, האיטי, הודו, הונדורס, הרפובליקה הדומיניקנית, הרפובליקה הדמוקרטית  של קונגו (קונגו-קינשאסה), הרפובליקה המרכז אפריקאית, הרפובליקה של קונגו (קונגו- ברזוויל), וייטנאם, ונואטו, ונצואלה, זימבבואה, זמביה, זנזיבר(טנזניה), חוף השנהב, טוגו, טנזניה, לאוס, ליבריה, מאוריטניה, מאלי, מדגסקר, מוזמביק, מזרח טימור, מלאווי, מלזיה, מקסיקו, ניגריה, ניז'ר, ניקרגואה, נמיביה, נפאל, סאו טומה ופרינסיפה, סודאן, סומליה, סורינם, סיירה-לאון, סנגל, ערב הסעודית, פיליפינים, פנמה, פפואה  גינאה החדשה, פקיסטן, פרו, צ'אד, קולומביה, קומורו, קוריאה הדרומית, קוריאה הצפונית, קמבודיה, קמרון, קניה, רואנדה, תאילנד, תימן",
                 "yes": "כן",
                 "no": "לא",
                 "comment": "אין באפשרותך לתרום דם כעת."
             },
             "countriesAIDS": {
                 "q": "האם שהית או ביקרת באחת מהמדינות הבאות?",
-                "description": [
-                    "איי בהאמה",
-                    "אריתריאה",
-                    "אתיופיה",
-                    "בוטסואנה",
-                    "בליז",
-                    "ברבדוס",
-                    "ג'מייקה",
-                    "דרום אפריקה",
-                    "הרפובליקה הדומיניקנית",
-                    "טרינידד וטובגו",
-                    "כף ורדה",
-                    "לסוטו",
-                    "מאוריציוס",
-                    "נמיביה",
-                    "סורינם",
-                    "תאילנד"
-                ],
+                "description": "איי בהאמה, אריתריאה, אתיופיה, בוטסואנה, בליז, ברבדוס, ג'מייקה, דרום אפריקה, הרפובליקה הדומיניקנית, טרינידד וטובגו, כף ורדה, לסוטו, מאוריציוס, נמיביה, סורינם, תאילנד",
                 "yesLately": "כן, בשלושת החודשים האחרונים",
                 "comment": "אין באפשרותך לתרום דם כעת.",
                 "yesNotLately": "כן, לפני יותר משלושה חודשים",
