ui fixes and static build

--- a/locales/he.json
+++ b/locales/he.json
@@ -10,7 +10,7 @@
             "title": "סימולציית התאמה לתרומת דם",
             "description": "מטרת הסימולציה היא לוודא שאתם עומדים בקריטריונים של מד”א לתרומת דם. במידה ותימצאו מתאימים מומלץ להגיע לעמדת התרמה, שם יהיה עליכם למלא הצהרת בריאות, ולעבור בדיקה נוספת (לחץ דם והמוגלובין).",
             "aboutForm": "טופס זה מבוסס על טופס מד״א והם יהיו הגורם שיקבע סופית את ההתאמה שלכם לתרומת דם.",
-            "startBtn": "להתחיל",
+            "startBtn": "מתחילים",
             "restartBtn": "להתחיל מחדש",
             "continueBtn": "להמשיך מאיפה שעצרתי"
         },
