add link to home + add register link

--- a/locales/he.json
+++ b/locales/he.json
@@ -3,6 +3,7 @@
         "homepage": {
             "title": "מתגייסים לחזית תורמי הדם",
             "subtitle": "כל המידע על נקודות התרמה, הנחיות לתורמים ועדכוני מצב במקום אחד.",
+            "register": "הרשמה",
             "canDonateBtn": "האם אני יכול לתרום?",
             "whereDonateBtn": "איפה תורמים?"
         },
